--- a/countdownKing/public/index.html
+++ b/countdownKing/public/index.html
@@ -14,7 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <title>React App</title>
+    <title>CountdownKing</title>
   </head>
   <body>
     <div id="root"></div>
